refactor: Explicitly declare TrainingDefinitionWithLevelsDTO to mark which endpoints return levels; Refactor training definition DTO chain